--- a/src/app/views/user/venue-list/venue-list.component.html
+++ b/src/app/views/user/venue-list/venue-list.component.html
@@ -88,57 +88,92 @@
           </div>
         </div>
         <div class="w-full px-4 md:w-8/12">
-          <div class="text-sm block my-4 p-3 text-blueGray-700 rounded border border-solid border-blueGray-700">
+          <div class="text-sm block my-4 p-3 text-blueGray-700">
             <div class="container mx-auto">
-              <div class="flex flex-wrap border border-solid border-blueGray-700">
-                  <div class="text-sm block text-blueGray-700 rounded border border-solid border-blueGray-700">
-                    <img src="assets/img/angular.jpg" alt="" width="180">
+              <div class="flex flex-wrap items-center rounded border border-solid border-blueGray-700 relative">
+                  <div class="text-sm block text-blueGray-700 border border-solid border-blueGray-700">
+                    <img src="assets/img/angular.jpg" alt="" width="250">
+                  </div>
+                  <div class="absolute right-0 top-0">
+                    <div class="bg-orange-500 text-white font-bold py-1 px-2 rounded">
+                      <div class="flex flex-wrap justify-end">
+                        <div class="w-full flex-1">
+                          <span class="text-2xl">₹ 45000</span>
+                          <span>/ day</span>
+                        </div>
+                      </div>
+                    </div>
                   </div>
                   <div class="w-full flex-1">
-                    <div class="px-3 py-3 text-2xl font-bold rounded border border-solid border-blueGray-700">
+                    <div class="px-3 py-1 text-2xl font-bold rounded">
                       Shree Maruti Banquet (Name)
                     </div>
                     <div class="flex flex-wrap">
-                      <div class="px-3 text-sm rounded border border-solid border-blueGray-700">
+                      <div class="px-3 py-1 text-sm rounded">
+                        A-106, Sankalp Iconic Tower, Ahmedabad, Gujarat (Address)
+                      </div>
+                    </div>
+                    <div class="flex flex-wrap py-2">
+                      <div class="px-3 text-sm rounded">
                         Banquet (type)
                       </div>
-                      <div class="px-3 text-sm rounded border border-solid border-blueGray-700">
+                      <div class="px-3 text-sm text-teal-500 rounded">
                         <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star-half"></i> <span class="font-bold">4.5</span> (Rating)
                       </div>
                     </div>
-                    <div class="px-3 text-sm rounded border border-solid border-blueGray-700">
-                      <p class="text-sm font-normal">
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla, quisquam. In assumenda quis adipisci necessitatibus consequuntur dolores eveniet exercitationem minima eaque, mollitia illum autem quam, suscipit dolor nesciunt non (Description)
-                      </p>
-                      <button class="text-lightBlue-500 background-transparent font-semiboldpy-2 text-sm outline-none focus:outline-none hover:underline mr-1 mb-1 ease-linear transition-all duration-150" type="button">
-                        Read more...
-                      </button>
+                    <div class="flex flex-wrap items-center py-8">
+                      <div class="w-full flex flex-1 justify-center items-center rounded">
+                        <i class="fas fa-male text-2xl"></i>
+                        <div class="flex-col">
+                          <p class="px-2 font-bold">500</p>
+                          <p class="px-2 text-xs font-semibold">people capacity (feature)</p>
+                        </div>
+                      </div>
+                      <div class="w-full flex flex-1 justify-center items-center rounded">
+                        <i class="fas fa-male text-2xl"></i>
+                        <div class="flex-col">
+                          <p class="px-2 font-bold">500</p>
+                          <p class="px-2 text-xs font-semibold">people capacity (feature)</p>
+                        </div>
+                      </div>
+                      <div class="w-full flex flex-1 justify-center items-center rounded">
+                        <i class="fas fa-male text-2xl"></i>
+                        <div class="flex-col">
+                          <p class="px-2 font-bold">500</p>
+                          <p class="px-2 text-xs font-semibold">people capacity (feature)</p>
+                        </div>
+                      </div>
                     </div>
-                    <div class="flex flex-wrap justify-end rounded border border-solid border-blueGray-700">
-
-                          <!-- <div class="w-full px-4 flex-1">
-                            <span class="text-sm block my-4 p-3 text-blueGray-700 rounded border border-solid border-blueGray-100">column</span>
-                          </div>
-                          <div class="w-full px-4 flex-1">
-                            <span class="text-sm block my-4 p-3 text-blueGray-700 rounded border border-solid border-blueGray-100">column</span>
-                          </div> -->
-                          <div class="w-full flex-1 items-center py-2">
-                            <div class="text-sm block text-blueGray-700 rounded border border-solid border-blueGray-100 px-3">
-                              <button class="background-transparent font-semibold outline-none focus:outline-none mr-1 mb-1 ease-linear transition-all duration-150" type="button">
-                                <i class="fas fa-dot-circle text-emerald-500"></i> Vegetarian
-                              </button>
-                              <button class="background-transparent font-semibold outline-none focus:outline-none mr-1 mb-1 ease-linear transition-all duration-150" type="button">
-                                <i class="fas fa-dot-circle text-red-500"></i> Non Vegetarian
-                              </button>
+                    <div class="flex flex-wrap items-center">
+                      <div class="container mx-auto">
+                        <div class="flex flex-wrap">
+                          <div class="w-full flex-1">
+                            <div class="text-sm block text-blueGray-700">
+                              <p class="background-transparent font-semibold outline-none focus:outline-none px-3 ease-linear transition-all duration-150">
+                                <i class="fas fa-dot-circle text-emerald-500"></i> Veg
+                              </p>
+                              <p class="px-3">
+                                <span class="text-xl font-bold">
+                                  ₹ 500</span>/Plate
+                              </p>
                             </div>
                           </div>
-                          <div class="w-full flex-1 justify-end">
-                            <div class="text-sm block text-blueGray-700 rounded border border-solid border-blueGray-100">
-                              <button class="bg-teal-500 text-white active:bg-teal-600 font-bold uppercase text-xs px-4 py-2 rounded shadow hover:shadow-md outline-none focus:outline-none mr-1 mb-1 ease-linear transition-all duration-150" type="button">
-                                Book Now <i class="fas fa-arrow-alt-circle-right ml-3"></i>
-                              </button>
+                          <div class="w-full flex-1">
+                            <div class="text-sm block text-blueGray-700">
+                              <p class="background-transparent font-semibold outline-none focus:outline-none px-3 ease-linear transition-all duration-150">
+                                <i class="fas fa-dot-circle text-red-500"></i> Non Veg
+                              </p>
+                              <p class="px-3">
+                                <span class="text-xl font-bold">
+                                ₹ 800</span>/Plate
+                              </p>
                             </div>
                           </div>
+                          <button class="bg-teal-500 text-white active:bg-teal-600 font-bold uppercase text-md px-4 py-2 rounded shadowhover:shadow-lgoutline-none focus:outline-none ease-linear transition-all duration-150" type="button">
+                            Book Now
+                          </button>
+                        </div>
+                      </div>
                     </div>
                   </div>
               </div>
