--- a/src/app/views/user/venue-list/venue-list.component.html
+++ b/src/app/views/user/venue-list/venue-list.component.html
@@ -33,7 +33,7 @@
       </svg>
     </div>
   </section>
-  <section class=" pb-20 bg-blueGray-200 -mt-24">
+  <section class="bg-blueGray-200 -mt-24">
     <div class="container mx-auto px-4">
       <div class="flex flex-wrap justify-center items-center">
 
@@ -79,15 +79,322 @@
       </div>
     </div>
   </section>
-  <section class="relative py-20">
+  <section class="relative py-20 bg-white">
     <div class="container px-4 mx-auto">
       <div class="flex flex-wrap justify-center">
         <div class="w-1/2 px-4 md:w-4/12">
           <div class="text-sm block my-4 p-3 text-blueGray-700 rounded border border-solid border-blueGray-700">
-            6 and md 4
+            <div class="flex flex-wrap justify-between">
+              <p class="text-md font-semibold">
+                Filter by
+              </p>
+              <button class="text-teal-500 background-transparent font-bold uppercase px-3 py-1 text-xs outline-none focus:outline-none mr-1 mb-1 ease-linear transition-all duration-150" type="button">
+                <i class="fas fa-filter"></i> Reset Filters
+              </button>
+            </div>
+            <hr>
+            <div class="container mx-auto">
+              <div class="flex flex-wrap">
+                <div class="w-full flex-1 rounded border border-solid border-blueGray-100">
+                  <div class="w-full text-sm block mt-3 p-3 text-blueGray-500 uppercase font-bold flex justify-between items-center ">
+                    <span>Type</span>
+                    <button class="text-teal-500 background-transparent font-semibold text-md outline-none focus:outline-none ease-linear transition-all duration-150" type="button">
+                      Clear
+                    </button>
+                  </div>
+                  <div class="w-full text-sm block text-blueGray-500 uppercase font-bold flex">
+                    <form action="" class="border border-solid border-blueGray-100 flex-1 items-center">
+                      <div class="m-2">
+                        <label class="inline-flex items-center cursor-pointer">
+                          <input
+                            id=""
+                            type="checkbox"
+                            class="form-checkbox border text-blueGray-700 ml-1 w-5 h-5 ease-linear transition-all duration-150 rounded"
+                          />
+                          <span class="ml-2 text-sm font-semibold text-blueGray-600">
+                            Party Plot
+                          </span>
+                        </label>
+                      </div>
+                      <div class="m-2">
+                        <label class="inline-flex items-center cursor-pointer">
+                          <input
+                            id=""
+                            type="checkbox"
+                            class="form-checkbox border text-blueGray-700 ml-1 w-5 h-5 ease-linear transition-all duration-150 rounded"
+                          />
+                          <span class="ml-2 text-sm font-semibold text-blueGray-600">
+                            Banquet
+                          </span>
+                        </label>
+                      </div>
+                      <div class="m-2 flex justify-end">
+                        <button class="bg-teal-500 text-white active:bg-teal-600 font-bold uppercase text-xs px-4 py-2 rounded shadow hover:shadow-md outline-none focus:outline-none ease-linear transition-all duration-150" type="button">
+                          Apply
+                        </button>
+                      </div>
+                    </form>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="container mx-auto">
+              <div class="flex flex-wrap">
+                <div class="w-full flex-1 rounded border border-solid border-blueGray-100">
+                  <div class="w-full text-sm block mt-3 p-3 text-blueGray-500 uppercase font-bold flex justify-between items-center ">
+                    <span>People Capacity</span>
+                    <button class="text-teal-500 background-transparent font-semibold text-md outline-none focus:outline-none ease-linear transition-all duration-150" type="button">
+                      Clear
+                    </button>
+                  </div>
+                  <div class="w-full text-sm block text-blueGray-500 font-bold flex">
+                    <form action="" class="border border-solid border-blueGray-100 flex-1 items-center">
+                      <div class="m-2">
+                        <label class="inline-flex items-center cursor-pointer">
+                          <input
+                            id=""
+                            type="checkbox"
+                            class="form-checkbox border text-blueGray-700 ml-1 w-5 h-5 ease-linear transition-all duration-150 rounded"
+                          />
+                          <span class="ml-2 text-sm font-semibold text-blueGray-600">
+                            Under 500
+                          </span>
+                        </label>
+                      </div>
+                      <div class="m-2">
+                        <label class="inline-flex items-center cursor-pointer">
+                          <input
+                            id=""
+                            type="checkbox"
+                            class="form-checkbox border text-blueGray-700 ml-1 w-5 h-5 ease-linear transition-all duration-150 rounded"
+                          />
+                          <span class="ml-2 text-sm font-semibold text-blueGray-600">
+                            Under 1000
+                          </span>
+                        </label>
+                      </div>
+                      <div class="m-2">
+                        <label class="inline-flex items-center cursor-pointer">
+                          <input
+                            id=""
+                            type="checkbox"
+                            class="form-checkbox border text-blueGray-700 ml-1 w-5 h-5 ease-linear transition-all duration-150 rounded"
+                          />
+                          <span class="ml-2 text-sm font-semibold text-blueGray-600">
+                            Under 1200
+                          </span>
+                        </label>
+                      </div>
+                      <div class="m-2 flex justify-end">
+                        <button class="bg-teal-500 text-white active:bg-teal-600 font-bold uppercase text-xs px-4 py-2 rounded shadow hover:shadow-md outline-none focus:outline-none ease-linear transition-all duration-150" type="button">
+                          Apply
+                        </button>
+                      </div>
+                    </form>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="container mx-auto">
+              <div class="flex flex-wrap">
+                <div class="w-full flex-1 rounded border border-solid border-blueGray-100">
+                  <div class="w-full text-sm block mt-3 p-3 text-blueGray-500 uppercase font-bold flex justify-between items-center ">
+                    <span>Budget</span>
+                    <button class="text-teal-500 background-transparent font-semibold text-md outline-none focus:outline-none ease-linear transition-all duration-150" type="button">
+                      Clear
+                    </button>
+                  </div>
+                  <div class="w-full text-sm block text-blueGray-500 font-bold flex">
+                    <form action="" class="border border-solid border-blueGray-100 flex-1 items-center">
+                      <div class="m-2">
+                        <label class="inline-flex items-center cursor-pointer">
+                          <input
+                            id=""
+                            type="checkbox"
+                            class="form-checkbox border text-blueGray-700 ml-1 w-5 h-5 ease-linear transition-all duration-150 rounded"
+                          />
+                          <span class="ml-2 text-sm font-semibold text-blueGray-600">
+                            Under 500
+                          </span>
+                        </label>
+                      </div>
+                      <div class="m-2">
+                        <label class="inline-flex items-center cursor-pointer">
+                          <input
+                            id=""
+                            type="checkbox"
+                            class="form-checkbox border text-blueGray-700 ml-1 w-5 h-5 ease-linear transition-all duration-150 rounded"
+                          />
+                          <span class="ml-2 text-sm font-semibold text-blueGray-600">
+                            Under 1000
+                          </span>
+                        </label>
+                      </div>
+                      <div class="m-2">
+                        <label class="inline-flex items-center cursor-pointer">
+                          <input
+                            id=""
+                            type="checkbox"
+                            class="form-checkbox border text-blueGray-700 ml-1 w-5 h-5 ease-linear transition-all duration-150 rounded"
+                          />
+                          <span class="ml-2 text-sm font-semibold text-blueGray-600">
+                            Under 1200
+                          </span>
+                        </label>
+                      </div>
+                      <div class="m-2 flex justify-end">
+                        <button class="bg-teal-500 text-white active:bg-teal-600 font-bold uppercase text-xs px-4 py-2 rounded shadow hover:shadow-md outline-none focus:outline-none ease-linear transition-all duration-150" type="button">
+                          Apply
+                        </button>
+                      </div>
+                    </form>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="container mx-auto">
+              <div class="flex flex-wrap">
+                <div class="w-full flex-1 rounded border border-solid border-blueGray-100">
+                  <div class="w-full text-sm block mt-3 p-3 text-blueGray-500 uppercase font-bold flex justify-between items-center ">
+                    <span>Food</span>
+                    <button class="text-teal-500 background-transparent font-semibold text-md outline-none focus:outline-none ease-linear transition-all duration-150" type="button">
+                      Clear
+                    </button>
+                  </div>
+                  <div class="w-full text-sm block text-blueGray-500 font-bold flex">
+                    <form action="" class="border border-solid border-blueGray-100 flex-1 items-center">
+                      <div class="m-2">
+                        <label class="inline-flex items-center cursor-pointer">
+                          <input
+                            id=""
+                            type="checkbox"
+                            class="form-checkbox border text-blueGray-700 ml-1 w-5 h-5 ease-linear transition-all duration-150 rounded"
+                          />
+                          <span class="ml-2 text-sm font-semibold text-blueGray-600">
+                            Vegetarian
+                          </span>
+                        </label>
+                      </div>
+                      <div class="m-2">
+                        <label class="inline-flex items-center cursor-pointer">
+                          <input
+                            id=""
+                            type="checkbox"
+                            class="form-checkbox border text-blueGray-700 ml-1 w-5 h-5 ease-linear transition-all duration-150 rounded"
+                          />
+                          <span class="ml-2 text-sm font-semibold text-blueGray-600">
+                            Non Vegetarian
+                          </span>
+                        </label>
+                      </div>
+                      <div class="m-2 flex justify-end">
+                        <button class="bg-teal-500 text-white active:bg-teal-600 font-bold uppercase text-xs px-4 py-2 rounded shadow hover:shadow-md outline-none focus:outline-none ease-linear transition-all duration-150" type="button">
+                          Apply
+                        </button>
+                      </div>
+                    </form>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="container mx-auto">
+              <div class="flex flex-wrap">
+                <div class="w-full flex-1 rounded border border-solid border-blueGray-100">
+                  <div class="w-full text-sm block mt-3 p-3 text-blueGray-500 uppercase font-bold flex justify-between items-center ">
+                    <span>Facilties</span>
+                    <button class="text-teal-500 background-transparent font-semibold text-md outline-none focus:outline-none ease-linear transition-all duration-150" type="button">
+                      Clear
+                    </button>
+                  </div>
+                  <div class="w-full text-sm block text-blueGray-500 font-bold flex">
+                    <form action="" class="border border-solid border-blueGray-100 flex-1 items-center">
+                      <div class="m-2">
+                        <label class="inline-flex items-center cursor-pointer">
+                          <input
+                            id=""
+                            type="checkbox"
+                            class="form-checkbox border text-blueGray-700 ml-1 w-5 h-5 ease-linear transition-all duration-150 rounded"
+                          />
+                          <span class="ml-2 text-sm font-semibold text-blueGray-600">
+                            Outside food allowed
+                          </span>
+                        </label>
+                      </div>
+                      <div class="m-2">
+                        <label class="inline-flex items-center cursor-pointer">
+                          <input
+                            id=""
+                            type="checkbox"
+                            class="form-checkbox border text-blueGray-700 ml-1 w-5 h-5 ease-linear transition-all duration-150 rounded"
+                          />
+                          <span class="ml-2 text-sm font-semibold text-blueGray-600">
+                            Late music allowed
+                          </span>
+                        </label>
+                      </div>
+                      <div class="m-2">
+                        <label class="inline-flex items-center cursor-pointer">
+                          <input
+                            id=""
+                            type="checkbox"
+                            class="form-checkbox border text-blueGray-700 ml-1 w-5 h-5 ease-linear transition-all duration-150 rounded"
+                          />
+                          <span class="ml-2 text-sm font-semibold text-blueGray-600">
+                            Food provided by venue
+                          </span>
+                        </label>
+                      </div>
+                      <div class="m-2 flex justify-end">
+                        <button class="bg-teal-500 text-white active:bg-teal-600 font-bold uppercase text-xs px-4 py-2 rounded shadow hover:shadow-md outline-none focus:outline-none ease-linear transition-all duration-150" type="button">
+                          Apply
+                        </button>
+                      </div>
+                    </form>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="container mx-auto">
+              <div class="flex flex-wrap">
+                <div class="w-full flex-1 rounded border border-solid border-blueGray-100">
+                  <div class="w-full text-sm block mt-3 p-3 text-blueGray-500 uppercase font-bold flex justify-between items-center ">
+                    <span>Available Dates</span>
+                    <button class="text-teal-500 background-transparent font-semibold text-md outline-none focus:outline-none ease-linear transition-all duration-150" type="button">
+                      Clear
+                    </button>
+                  </div>
+                  <div class="w-full text-sm block text-blueGray-500 font-bold">
+                    <form action="" class="border border-solid border-blueGray-100 flex justify-center items-center">
+                      <div class="m-2">
+                          <input type="date" placeholder="Date" class="border-0 px-3 py-3 placeholder-blueGray-700 text-blueGray-600 relative rounded border border-solid border-blueGray-100 text-sm shadow focus:outline-none w-full ease-linear transition-all duration-150"/>
+                      </div>
+                      <div class="my-4 flex justify-center">
+                          <span class="text-xl">To</span>
+                      </div>
+                      <div class="m-2">
+                          <input type="date" placeholder="Date" class="border-0 px-3 py-3 placeholder-blueGray-700 text-blueGray-600 relative rounded border border-solid border-blueGray-100 text-sm shadow focus:outline-none w-full ease-linear transition-all duration-150"/>
+                      </div>
+                    </form>
+                    <div class="m-2 flex justify-end">
+                      <button class="bg-teal-500 text-white active:bg-teal-600 font-bold uppercase text-xs px-4 py-2 rounded shadow hover:shadow-md outline-none focus:outline-none ease-linear transition-all duration-150" type="button">
+                        Apply
+                      </button>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
         <div class="w-full px-4 md:w-8/12">
+          <div class="flex flex-1">
+            <div class="w-full text-sm block mt-3 p-3 text-blueGray-500 uppercase font-bold flex justify-between items-center rounded border border-solid border-blueGray-100">
+              <span>200 Total Result Found</span>
+              <button class="bg-teal-500 text-white active:bg-teal-600 font-bold uppercase text-xs px-4 py-2 rounded shadow hover:shadow-md outline-none focus:outline-none mr-1 mb-1 ease-linear transition-all duration-150" type="button">
+                Sort by <i class="fas fa-chevron-down ml-2"></i>
+              </button>
+            </div>
+          </div>
           <div class="text-sm block my-4 p-3 text-blueGray-700">
             <div class="container mx-auto">
               <div class="flex flex-wrap items-center rounded border border-solid border-blueGray-700 relative">
