--- a/src/app/views/landing/landing.component.html
+++ b/src/app/views/landing/landing.component.html
@@ -7,13 +7,13 @@
         </div>
         <div class="container relative mx-auto">
             <div class="items-center flex flex-wrap">
-                <div class="w-full lg:w-6/12 px-4 ml-auto mr-auto text-center">
+                <div class="w-full lg:w-6/12 px-4 ml-auto mr-auto text-center flex-1">
                     <div class="pr-12">
                         <h1 class="text-white font-semibold text-5xl">
-                            Your story starts with us.
+                            Our <span class="font-bold">plans</span> for your <span class="font-bold">strategies.</span>
                         </h1>
                         <p class="mt-4 text-lg text-blueGray-200">
-                            This is a simple example of a Landing Page you can build using Notus Angular. It features multiple CSS components based on the Tailwind CSS design system.
+                            See below our three main plans for your business, for your Party Plots or Banquets.It starts from here!
                         </p>
                     </div>
                 </div>
@@ -38,10 +38,10 @@
                             <div class="text-white p-3 text-center inline-flex items-center justify-center w-12 h-12 mb-5 shadow-lg rounded-full bg-red-400">
                                 <i class="fas fa-award"></i>
                             </div>
-                            <h6 class="text-xl font-semibold">Awarded Agency</h6>
-                            <p class="mt-2 mb-4 text-blueGray-500">
+                            <h6 class="text-xl font-semibold">Simple</h6>
+                            <!-- <p class="mt-2 mb-4 text-blueGray-500">
                                 Divide details about your product or agency work into parts. A paragraph describing a feature will be enough.
-                            </p>
+                            </p> -->
                         </div>
                     </div>
                 </div>
@@ -52,10 +52,10 @@
                             <div class="text-white p-3 text-center inline-flex items-center justify-center w-12 h-12 mb-5 shadow-lg rounded-full bg-lightBlue-400">
                                 <i class="fas fa-retweet"></i>
                             </div>
-                            <h6 class="text-xl font-semibold">Free Revisions</h6>
-                            <p class="mt-2 mb-4 text-blueGray-500">
+                            <h6 class="text-xl font-semibold">Basic</h6>
+                            <!-- <p class="mt-2 mb-4 text-blueGray-500">
                                 Keep you user engaged by providing meaningful information. Remember that by this time, the user is curious.
-                            </p>
+                            </p> -->
                         </div>
                     </div>
                 </div>
@@ -66,10 +66,10 @@
                             <div class="text-white p-3 text-center inline-flex items-center justify-center w-12 h-12 mb-5 shadow-lg rounded-full bg-emerald-400">
                                 <i class="fas fa-fingerprint"></i>
                             </div>
-                            <h6 class="text-xl font-semibold">Verified Company</h6>
-                            <p class="mt-2 mb-4 text-blueGray-500">
+                            <h6 class="text-xl font-semibold">Pro</h6>
+                            <!-- <p class="mt-2 mb-4 text-blueGray-500">
                                 Write a few lines about each one. A paragraph describing a feature will be enough. Keep you user engaged!
-                            </p>
+                            </p> -->
                         </div>
                     </div>
                 </div>
