--- a/src/app/components/sidebar/sidebar.component.html
+++ b/src/app/components/sidebar/sidebar.component.html
@@ -210,7 +210,28 @@
             Subscription Report
           </a>
         </li>
-
+       
+        <li class="items-center">
+          <a
+            [routerLink]="['/admin/notification']"
+            class="text-xs uppercase py-3 font-bold block"
+            routerLinkActive
+            #notification="routerLinkActive"
+            [ngClass]="
+            notification.isActive
+                ? 'text-red-600 hover:text-red-700'
+                : 'text-blueGray-700 hover:text-blueGray-500'
+            "
+          >
+            <i
+              class="fas fa-bell mr-2 text-sm"
+              [ngClass]="
+              notification.isActive ? 'opacity-75' : 'text-blueGray-300'
+              "
+            ></i>
+            Notification
+          </a>
+        </li>
         <li class="items-center">
           <a
             [routerLink]="['/admin/website-settings']"
