--- a/src/app/views/landing/landing.component.html
+++ b/src/app/views/landing/landing.component.html
@@ -35,9 +35,10 @@
                 <div class="lg:pt-12 pt-6 w-full md:w-4/12 px-4 text-center">
                     <div class="relative flex flex-col min-w-0 break-words bg-white w-full mb-8 shadow-lg rounded-lg">
                         <div class="px-4 py-5 flex-auto">
-                            <div class="text-white p-3 text-center inline-flex items-center justify-center w-12 h-12 mb-5 shadow-lg rounded-full bg-red-400">
+                            <img src="assets/img/investment-bg.svg" alt="">
+                            <!-- <div class="text-white p-3 text-center inline-flex items-center justify-center w-12 h-12 mb-5 shadow-lg rounded-full bg-red-400">
                                 <i class="fas fa-award"></i>
-                            </div>
+                            </div> -->
                             <h6 class="text-xl font-semibold">Simple</h6>
                             <!-- <p class="mt-2 mb-4 text-blueGray-500">
                                 Divide details about your product or agency work into parts. A paragraph describing a feature will be enough.
