--- a/src/app/views/admin/notification/notification.component.html
+++ b/src/app/views/admin/notification/notification.component.html
@@ -37,7 +37,7 @@
             </div>
 
             <div class="w-full h-24 overflow-scroll">
-              <ul class="list-group">
+              <!-- <ul class="list-group">
                 <li class="w-full px-4 flex-1">
                   <span
                     class="text-3sm block my-4 p-3 text-blueGray-700 rounded border border-solid border-blueGray-100"
@@ -160,7 +160,7 @@
                     />&nbsp; patel ram harishbhai
                   </span>
                 </li>
-              </ul>
+              </ul> -->
             </div>
 
             <div class="relative w-full mb-3">
