--- a/src/app/views/admin/notification/notification.component.html
+++ b/src/app/views/admin/notification/notification.component.html
@@ -24,7 +24,7 @@
                 </label>
               </div> -->
 
-            <div class="relative flex w-full flex-wrap items-stretch">
+            <!-- <div class="relative flex w-full flex-wrap items-stretch">
               <span
                 class="z-10 h-full leading-snug font-normal absolute text-center text-blueGray-300 absolute bg-transparent rounded text-base items-center justify-center w-8 pl-3 py-3"
                 ><i class="fas fa-search"></i
@@ -34,7 +34,7 @@
                 placeholder="Search here..."
                 class="border-0 px-3 py-3 placeholder-blueGray-300 text-blueGray-600 relative bg-white bg-white rounded text-sm shadow outline-none focus:outline-none focus:ring w-full pl-10"
               />
-            </div>
+            </div> -->
 
             <div class="w-full h-24 overflow-scroll">
               <!-- <ul class="list-group">
@@ -161,6 +161,15 @@
                   </span>
                 </li>
               </ul> -->
+              <ng-multiselect-dropdown
+                [placeholder]="'Select users'"
+                [settings]="dropdownSettings"
+                [data]="dropdownList"
+                [(ngModel)]="selectedItems"
+                (onSelect)="onItemSelect($event)"
+                (onSelectAll)="onSelectAll($event)"
+              >
+              </ng-multiselect-dropdown>
             </div>
 
             <div class="relative w-full mb-3">
